Bug 140098 - FILESAVE XLSX Excel detects invalid contents in autofilter of particular document
Summary: FILESAVE XLSX Excel detects invalid contents in autofilter of particular docu...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.2.0
Keywords: filter:xlsx
Depends on:
Blocks: XLSX-Corrupted XLSX-Autofilter
  Show dependency treegraph
 
Reported: 2021-02-02 16:24 UTC by NISZ LibreOffice Team
Modified: 2021-02-17 11:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
attachment 169386 saved as XLSX (6.74 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-02-02 16:24 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document in Excel 2013 (51.14 KB, image/png)
2021-02-02 16:25 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-02-02 16:24:39 UTC
Created attachment 169398 [details]
attachment 169386 [details] saved as XLSX

Upon saving attachment 169386 [details] from bug #133492 to XLSX format and opening it in Excel, it detects invalid contents in the autofilter.

Steps to reproduce:
    1. Open attachment 169386 [details]
    2. Save as XLSX
    3. Open it in Excel

Actual results:
Excel says it found invalid contents in the autofilter, should it try to fix it.

Expected results:
No such error.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 318d384c596c1593667d6c936f55bf6ebd0c5db6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-GB
Calc: CL

Also happens in older versions: 7.0, 6.0, 5.0, 4.0 -> likely not a regression
Comment 1 NISZ LibreOffice Team 2021-02-02 16:25:01 UTC
Created attachment 169399 [details]
Screenshot of the exported document in Excel 2013
Comment 2 Roman Kuznetsov 2021-02-03 13:13:44 UTC
confirm in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6ab1feb2604d2620435a2aecbafff1d8c21255e9
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

and in

Версия: 5.2.7.2
ID сборки: 2b7f1e640c46ceb28adf43ee075a6e8b8439ed10
Потоков ЦП: 4; Версия ОС: Windows 6.2; Отрисовка ИП: по умолчанию; 
Локаль: ru-RU (ru_RU); Calc: group
Comment 3 Commit Notification 2021-02-16 08:22:29 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/66da7cd0a52532d6e73eb2cde78ca369917ab01a

tdf#140098 sc ooxml: fix export of blank filter in non empty filters

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Roman Kuznetsov 2021-02-17 11:17:03 UTC
verified in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2c8ffa41ec8e1ab2af95d5e033a445c17d29cf5a
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

Thanks for fix!