tdf#140098 sc ooxml: fix export of blank filter in non empty filters

Export blank filter value in non empty filters, as the OOXML standard required.

Change-Id: I4e1e3d8e1e2e784d1b4adc5e385f200af86d18ab