sc/qa/unit/subsequent_export-test.cxx
@@ -269,6 +269,7 @@ public:
     void testHeaderFontStyleXLSX();
     void testTdf135828_Shape_Rect();
     void testTdf123353();
+    void testTdf140098();
     void testTdf133688_precedents();
     void testTdf91251_missingOverflowRoundtrip();
     void testTdf137000_handle_upright();
@@ -449,6 +450,7 @@ public:
     CPPUNIT_TEST(testHeaderFontStyleXLSX);
     CPPUNIT_TEST(testTdf135828_Shape_Rect);
     CPPUNIT_TEST(testTdf123353);
+    CPPUNIT_TEST(testTdf140098);
     CPPUNIT_TEST(testTdf133688_precedents);
     CPPUNIT_TEST(testTdf91251_missingOverflowRoundtrip);
     CPPUNIT_TEST(testTdf137000_handle_upright);
@@ -5561,6 +5563,24 @@ void ScExportTest::testTdf135828_Shape_Rect()
 void ScExportTest::testTdf123353()
 {
     ScDocShellRef xShell = loadDoc(u"tdf123353.", FORMAT_XLSX);
+    CPPUNIT_ASSERT(xShell.is());
+
+    ScDocShellRef xDocSh = saveAndReload(&(*xShell), FORMAT_XLSX);
+    CPPUNIT_ASSERT(xDocSh.is());
+
+    std::shared_ptr<utl::TempFile> pXPathFile = ScBootstrapFixture::exportTo(&(*xDocSh), FORMAT_XLSX);
+
+    xmlDocUniquePtr pDoc = XPathHelper::parseExport(pXPathFile, m_xSFactory, "xl/worksheets/sheet1.xml");
+    CPPUNIT_ASSERT(pDoc);
+
+    assertXPath(pDoc, "/x:worksheet/x:autoFilter/x:filterColumn/x:filters", "blank", "1");
+
+    xShell->DoClose();
+}
+
+void ScExportTest::testTdf140098()
+{
+    ScDocShellRef xShell = loadDoc(u"tdf140098.", FORMAT_ODS);
     CPPUNIT_ASSERT(xShell.is());
 
     ScDocShellRef xDocSh = saveAndReload(&(*xShell), FORMAT_XLSX);
